[gd_scene load_steps=6 format=3 uid="uid://clu2r6usspr4j"]

[ext_resource type="Script" path="res://Core/GUI/Cutscene/cutscene_component.gd" id="1_dhyly"]
[ext_resource type="Script" path="res://Core/GUI/Cutscene/cutscene_label.gd" id="2_3ckje"]
[ext_resource type="Script" path="res://Core/GUI/Cutscene/cutscene_resource.gd" id="2_uam5p"]

[sub_resource type="Resource" id="Resource_1t1ei"]
script = ExtResource("2_uam5p")
cutscene_text = "Hello, my name is Timmy. Or is it...."
typing_speed = 0.1
slowdown_threshold = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i8s3i"]
bg_color = Color(0, 0, 0, 1)

[node name="CutsceneComponent" type="CanvasLayer"]
script = ExtResource("1_dhyly")
cutscene_panels = Array[ExtResource("2_uam5p")]([SubResource("Resource_1t1ei")])

[node name="CutsceneBackground" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i8s3i")

[node name="CutsceneLabel" type="RichTextLabel" parent="CutsceneBackground"]
unique_name_in_owner = true
custom_minimum_size = Vector2(450, 150)
layout_mode = 2
offset_top = 145.0
offset_right = 1152.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Once upon a time there was a wee lad called timmy..."
visible_characters = 0
visible_ratio = 0.0
script = ExtResource("2_3ckje")

[node name="Timer" type="Timer" parent="CutsceneBackground/CutsceneLabel"]
unique_name_in_owner = true
wait_time = 0.25
autostart = true

[node name="NextButton" type="Button" parent="CutsceneBackground"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(80, 50)
layout_mode = 2
offset_left = 536.0
offset_top = 376.0
offset_right = 616.0
offset_bottom = 426.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Next"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
